Fixed contact layout on small screen sizes.
Fixed vertical cropping of background.
Fixed input box text colour.

--- a/CreouDotCom/css/style.less
+++ b/CreouDotCom/css/style.less
@@ -37,6 +37,11 @@ html, body
     font-family: Arial, Helvetica, sans-serif;
 }
 
+input
+{
+    color: black;
+}
+
 .margins
 {
     min-height: 100%;
@@ -44,7 +49,6 @@ html, body
     height: 100%;
     width: auto;
     max-width: 1100px;
-    margin: 0 auto -197px; /* the bottom margin is the negative value of the footer's height */
     background: transparent;
 }
 
@@ -373,7 +377,7 @@ ul li ul
 /* Forms */
 .formContainer
 {
-    margin: 10px 10px 30px 10px;
+    margin: 10px 10px 50px 10px;
     padding: 10px;
     font-size: 16px;
     border: 2px solid #5cbdf4;
@@ -519,12 +523,6 @@ input.pressableButton:hover
 }
 
 /* Footer */
-#push
-{
-    background: transparent;
-    height: 167px; /* .push must be the same height as .footer */
-}
-
 .footer-spacer{
     height: 20px;
 }
